Make sure lately words wrap properly.

--- a/app/assets/stylesheets/views/lately.css.scss
+++ b/app/assets/stylesheets/views/lately.css.scss
@@ -5,6 +5,7 @@ ul.juicer-feed {
 
   .feed-item {
     margin-bottom: 60px !important;
+    word-wrap: break-word;
   }
 
   img {
